# embedd

./: Cargo.toml  README.md
crates/embedd/: Cargo.toml  README.md
crates/embedd/benches/: embedd_bench.rs
crates/embedd/examples/: backend_compare.rs  backend_matrix.rs
crates/embedd/fuzz/: Cargo.toml
crates/embedd/fuzz/fuzz_targets/: safetensors_header.rs
crates/embedd/proptest-regressions/: lib.txt
crates/embedd/src/: lib.rs
crates/embedd/testdata/: embedding_corpus.txt
crates/embedd/tests/: cli_contract.rs  integration_hf_inference.rs  integration_http.rs  normalization_policy.rs  output_dim_policy.rs  prompted_embedder.rs  property_core.rs  property_modalities.rs  property_safetensors.rs
scripts/: stats_diff.py  stats_report.py
